--- a/.gitattributes
+++ b/.gitattributes
@@ -12,7 +12,7 @@
 # Generated codes
 index.js                         linguist-detectable=false
 index.d.ts                       linguist-detectable=false
-package-template.wasi-browser.js linguist-detectable=false
-package-template.wasi.cjs        linguist-detectable=false
+to_mp4.wasi-browser.js linguist-detectable=false
+to_mp4.wasi.cjs        linguist-detectable=false
 wasi-worker-browser.mjs          linguist-detectable=false
 wasi-worker.mjs                  linguist-detectable=false
