--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,21 +1,21 @@
+
 [package]
 authors = ["LongYinan <lynweklm@gmail.com>"]
 edition = "2021"
-name    = "napi-package-template"
+name = "to_mp4"
 version = "0.1.0"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
 crate-type = ["cdylib"]
 
 [dependencies]
-napi        = "3.0.0"
+napi = "3.0.0"
 napi-derive = "3.0.0"
+openh264 = "0.8.1"
 
 [build-dependencies]
 napi-build = "2"
 
 [profile.release]
-lto   = true
+lto = true
 strip = "symbols"
