--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@napi-rs/package-template",
+  "name": "@hopefulobject/tomp4",
   "version": "1.0.0",
   "description": "Template project for writing node package with napi-rs",
   "main": "index.js",
@@ -18,7 +18,7 @@
     "index.js"
   ],
   "napi": {
-    "binaryName": "package-template",
+    "binaryName": "to_mp4",
     "targets": [
       "x86_64-pc-windows-msvc",
       "x86_64-apple-darwin",
