--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 
 [package]
-authors = ["LongYinan <lynweklm@gmail.com>"]
+authors = ["Ibrahim"]
 edition = "2021"
 name = "to_mp4"
 version = "0.1.0"
