--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -307,6 +307,7 @@ jobs:
       - name: Publish
         run: |
           npm config set provenance true
+          echo "$NPM_TOKEN"
           if git log -1 --pretty=%B | grep "^[0-9]\+\.[0-9]\+\.[0-9]\+$";
           then
             echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
