--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hopefulobject/tomp4",
+  "name": "@hopeful_object/tomp4",
   "version": "1.0.0",
   "description": "Template project for writing node package with napi-rs",
   "main": "index.js",
